--- a/style_list_hospitals.css
+++ b/style_list_hospitals.css
@@ -23,10 +23,12 @@ body{
   background: linear-gradient(135deg,#F7CAC9,#FFE5B4);
 }
 .card{
+  height: 375px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px;
+  position: relative;
   transition: transform  .5s ease-in-out;
   background:linear-gradient(270deg,rgb(255,255,255,0.2),rgb(255,255,255,0.1));
   border:solid 2px rgb(255,255,255,0.2);
@@ -196,8 +198,6 @@ main{
   border: none;
   color: #606060;
   text-transform: capitalize;
-  font-style: italic;
-  text-decoration: underline;
   border-radius: 15px;
   background-color: #efefef;
   width: 100px;
@@ -205,8 +205,9 @@ main{
   margin: 5px;
   transition: all 0.3s ease-in-out;
   height: 25px;
-  position: relative;
-  bottom: -10px;
+  position: absolute;
+  bottom:   20px;
+  margin-top: 20px; 
   z-index: 1000;
 }
 .viewMore:hover{
