--- a/style_list_hospitals.css
+++ b/style_list_hospitals.css
@@ -331,3 +331,27 @@ li:nth-child(5){
     filter: brightness(0.8);
   }
 }
+
+.option-block{
+  width: 100px;
+  justify-content: start;
+  gap: 8px;
+  overflow: hidden;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 2px 2px 10px black,2px 2px 10px black;
+}
+
+.option-block div{
+  padding: 10px;
+  cursor: pointer;
+}
+.option-block div button:hover{
+  
+  color: black;
+}
+.option-block div:hover{
+  transform: scale(1.01);
+  background-color: #efefef;
+
+}
